<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/textViewWordIndex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/progress_name"
        android:textSize="16sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewFrenchWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/word_in_french_name"
        android:textSize="20sp"
        android:layout_below="@id/textViewWordIndex"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:id="@+id/editTextAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewFrenchWord"
        android:layout_marginTop="16dp"
        android:hint="@string/enter_translation_name"
        android:layout_centerHorizontal="true"
        android:inputType="text"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_name"
        android:layout_below="@id/editTextAnswer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/text_color"/>
    <Button
        android:id="@+id/buttonStopStudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_name"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/button_background"
        android:textColor="@color/text_color"/>
</RelativeLayout>
