<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".LoginActivity">

    <!-- Внутренний контейнер с фоном rounded_background -->
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rounded_background_login"
        android:padding="15dp"> <!-- Отступы внутри контейнера -->

        <!-- Поле для ввода email -->
        <EditText
            android:id="@+id/email_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/email_name"
            android:minHeight="48dp" />

        <!-- Поле для ввода пароля -->
        <EditText
            android:id="@+id/password_login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:hint="@string/pass_name"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <!-- Кнопка входа -->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/button_background"
            android:text="@string/login_name"
            android:textColor="@color/text_color" />

        <!-- Текст создания аккаунта -->
        <TextView
            android:id="@+id/register_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/create_acc_name"
            android:textSize="20sp" />

    </RelativeLayout>

</RelativeLayout>
