<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back_reg"
    android:gravity="center"
    android:orientation="vertical">

    <!-- Контейнер с закругленным фоном -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@drawable/rounded_background"> <!-- Применение закругленного фона -->

        <EditText
            android:id="@+id/email_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/email_name"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/pass_name"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background"
            android:text="@string/register_name"
            android:textColor="@color/text_color" />

    </LinearLayout>
</LinearLayout>
