<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color">
    <RelativeLayout
        android:id="@+id/myRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">
        <Button
            android:id="@+id/buttonStartStudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="15dp"
            android:backgroundTint="@color/button_background"
            android:text="@string/start_name"/>

        <TextView
            android:id="@+id/progressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/buttonStartStudy"
            android:text="@string/percent_name"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/word_list_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/myRelativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/words_name"
        android:textSize="18sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWords"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/word_list_title"
        android:layout_marginTop="8dp" />
</RelativeLayout>
